--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
-{{ range .Site.Params.custom_css -}}
-    <link rel="stylesheet" href="{{ . | absURL }}">
-{{- end }}
-<a class="skip-link" href="#main-content">{{ i18n "skip-link" }}</a>
-<a href="{{ relURL .Site.Home.RelPermalink }}" class="title">
-<div id="logo" style="background-image: url({{ .Site.Params.logo | absURL }})"></div>
-<h1>{{ .Site.Title }}</h1></a>
-<nav>{{- partial "nav.html" . -}}</nav>
+<div class="brand">
+  <a class="title" href="{{ relURL .Site.Home.RelPermalink }}">
+    <div id="logo" aria-hidden="true"></div>
+    <h1 class="site-title">{{ .Site.Title }}</h1>
+  </a>
+</div>
+
+<nav>{{ partial "nav.html" . }}</nav>
