--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <small id="foot">
-  <a href="https://github.com/smithbarlow/smithbarlow.xyz">{{ .Site.Copyright }}<br>
+  <a href="https://github.com/smithbarlow/smithbarlow.xyz">{{ .Site.Copyright }}</a><br>
 </small>
 <a href='{{ absURL "index.xml" }}'>
     <img id="rss" src="/images/rss.svg" alt="button for my RSS feed">
